# InteractionPlatform

./: pyproject.toml  requirements.txt
src/: negotiation_chat.py
streamlit/: negotiation_chat.py
