[tool.poetry]
name = "streamlit-app"
version = "0.1.0"
description = "A Streamlit app that utilizes OpenAI and other data handling packages."
authors = ["Veronika <veronikatsishetska@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.11.0" 
openai = "^0.19.0"
pandas = "^1.4.0" 
st-aggrid = "^0.3.2"  

[tool.poetry.group.dev.dependencies]
# Here, add any development-specific packages, like linters or test frameworks.

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

