[tool.poetry]
name = "interactionplatform"
version = "0.1.0"
description = "A Streamlit application for real-time interactions."
authors = ["Veronika Tsishetska <veronikatsishetska@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.11.0" 
openai = "^0.19.0"
pandas = "^1.4.0" 
streamlit-aggrid = "^0.3.2" 


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

